using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace Main.MWM.ViewModel
{
    internal class ProductionViewModel
    {
    }
}
