 @startuml
skinparam classAttributeIconSize 0
class SalesView{
{field} -Sizes : int[]
{field} -Colors : string[]
{field} -Models : string[]
{field} -ModelsTab : TabItem[]
{field} -ID_Size : Dictionary<int,string>
{field} -ID_Color : Dictionary<int,string>
{field} -ID_Model : Dictionary<int,string>
{field} -BikePriceByID : Dictionary<int,int>
{field} -ID_creator : Dictionary<string,int>
{field} -Size_Grid : Grid
{field} -Cart : Cart
{field} -EstimatedDateLabel : Label
{field} -Connection : MySqlConnection

{method} +SalesView() : Void
{method} -GetModelGrid(model) : Grid
{method} -GetCartGrid() : Grid
{method} -CheckInput(sender,e) : Void
{method} -ComfirmCart(sender,e) : Void
{method} -ComfirmAddToCart(sender,e) : Void
}

class Cart{
{field} +BikeDict : Dictionary<int,int>
{field} -BikePricebyID : Dictionary<int,int>
{field} -Rows : Dictionary<int,RowDefinition>
{field} -Children : Dictionary<int,List<UIElement>>
{field} -ID_Model : Dictionary<int,string>
{field} -ID_Size : Dictionary<int,string>
{field} -ID_Color : Dictionary<int,string>
{field} -EstimatedDateLabel : Label
{field} - Grid : Grid
{field} - Price : int
{field} - Connection : MySqlConnection

{method} +Cart(Connection, ID_Model, ID_Size, ID_Color, BikePricebyID, EstimatedDateLabel) : Void
{method} +SetContainer(Grid) : Void
{method} +AddToCart(ID, nb) : Void
{method} +DeleteFromCart(sender, e) : Void
{method} +ClearCart() : Void
{method} +DeleteRow(ID) : Void
{method} +MinusOne(sender, e) : Void
{method} +PlusOne(sender, e) : Void
{method} +RemoveFromCart(ID, nb) : Void
{method} +RemoveFromCart(ID) : Void
{method} +RegisterCustomer(customer) : Void
{method} +GetPrice() : int
{method} +GetEstimatedDate() : DateTime
{method} +UpdateEstimatedDate() : Void
}

class Customer{
{field} +FirstName : string
{field} +LastName : string
{field} +Address : string
{field} +Mail : string
{field} +Phone : string
{field} +CustomerNumber : int
}

interface IMultiValueConverter {
}

class PartColorConverter {
{method} +object Convert()
}

class StockView {
{field} -adp : MySqlDataAdapter
{field} #connection : MySqlConnection
{method} +void StockView()
{method} -void FillStockGrid()
{method} -void FillOrderGrid()
{method} -int GetPartNumber(index)
{method} -string GetPartLocation(index)
{method} -int GetPartQuantity(index)
{method} -int GetPartMinimumQuantity(index)
{method} -int GetLastPartNumber()
{method} -int GetOrderNumber(index)
{method} -void UseButton(sender, e)
{method} -void UpdatePartQuantityDb(part, amount)
{method} -void ConfirmUseButton(sender, e)
{method} -void CancelUseButton(sender, e)
{method} -void OrderButton(sender, e)
{method} -void CreateOrderDb(PartNumber, quantity)
{method} -void UpdateOrderDb()
{method} -void ConfirmOrderButton(sender, e)
{method} -void CancelOrderButton(sender, e)
{method} -void ParametersButton(sender, e)
{method} -void UpdatePartParametersDb(part, location, amount, MinAmount)
{method} -void ConfirmParametersButton(sender, e)
{method} -void CancelParametersButton(sender, e)
{method} -void AddPartButton(sender, e)
{method} -void AddPartDb(PartNumber, description, location, amount, MinAmount)
{method} -void ConfirmAddPartButton(sender, e)
{method} -void CancelAddPartButton(sender, e)
{method} -void ShowOrdersButton(sender, e)
{method} -void ShowStockButton(sender, e)
{method} -void SaveModificationsButton(sender, e)
{method} -void DeleteOrderDb(order)
{method} -void AddToStockButton(sender, e)
}

class ProductionView {
{field} -adp : MySqlDataAdapter
{field} #connection : MySqlConnection
{method} +void ProductionView()
{method} -int GetInvoiceDetailNumber(index)
{method} -int GetProductionIdNumber(index)
{method} -void ShowScheduleButton(sender, e)
{method} -void ShowInvoicesButton(sender, e)
{method} -void ShowProductionButton(sender, e)
{method} -void BackButton(sender, e)
{method} -void FillInvoicesGrid()
{method} -void FillProductionGrid()
{method} -void UpdateInvoiceStatusDb(invoice, status)
{method} -void AddToProductionDb(invoice)
{method} -void SendProductionButton(sender, e)
{method} -void ScheduleButton(sender, e)
{method} -void AddToScheduleDb(ProductionId, date)
{method} -void ConfirmScheduleButton(sender, e)
{method} -void CancelScheduleButton(sender, e)
{method} -void GetScheduleDb()
{method} -void BikeInformationDb(BikeId)
{method} -void BikeInfoButton(sender, e)
{method} -void CompleteBikeDb(BikeId)
{method} -void ValidateBikeButton(sender, e)
{method} -void CloseValidatePopupButton(sender, e)
}

IMultiValueConverter <|.. PartColorConverter
UserControl <|-- StockView
UserControl <|-- SalesView
UserControl <|-- ProductionView
SalesView o-- Cart

@enduml